# Model-Viewer

./: .travis.yml  BonedMesh.h  CMakeLists.txt  IMesh.h  Makefile  Mesh.cpp  Mesh.h  MeshContainer.h  MeshShaders.h  README.md  StaticMesh.cpp  Texture.cpp  Texture.h  main.cpp
Mesh/: BonedMesh.cpp  BonedMesh.h  IMesh.h  MeshContainer.cpp  MeshContainer.h  MeshShaders.cpp  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h
assets/: Spider_3.fbx  tile2.fbx
assets/tile1/: tile1.fbx  tile2.fbx
cmake_modules/: FindASSIMP.cmake
